--- a/index.html
+++ b/index.html
@@ -5,41 +5,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
     <title>HomePage</title>
 </head>
-<body class="vh-100" style="background: linear-gradient(to right, rgb(0, 0, 0) , rgb(90, 90, 90))">
-    <div class="container mt-2">
-        <nav class="navbar navbar-expand-lg navbar-dark">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">ASocial</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarScroll">
-              <ul class="navbar-nav my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                </li>
-              </ul>
-              <ul class="navbar-nav dropdown ms-auto">
-                <li class="nav-item">
-                  <a class="nav-link active fw-bold" href="login.html" style="color: skyblue;">Login</a>
-                </li>  
-                <li class="nav-item dropdown">
-                  <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="https://picsum.photos/id/237/200/300" alt="Avatar Logo" style="width:30px; height:30px;" class="rounded-pill"> 
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="profile.html">Profile</a></li>
-                    <!--<li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>-->
-                  </ul>
-                </li>
-              </ul>
+<body style="background: linear-gradient(to right, rgb(0, 0, 0) , rgb(90, 90, 90))">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6 left-section">
+                <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active" data-bs-interval="5000">
+                            <div class="mb-4 text-white">
+                                <div class="d-flex align-items-center justify-content-start m-2">
+                                    <img src="https://picsum.photos/id/237/200/300" alt="Avatar Logo" style="width:30px; height:30px;" class="rounded-pill">
+                                    <span class="m-2">Luis Walle</span>
+                                </div>
+                                <img src="https://picsum.photos/id/10/2500/1667" alt="image 1"
+                                  class="w-100 rounded">
+                                <div class="d-flex align-items-center m-2">
+                                    <div class="like-btn border-0 rounded-circle d-flex justify-content-center align-items-center p-2">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="m-0" viewBox="0 0 16 16">
+                                            <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                                        </svg> 
+                                    </div>
+                                    <span class="like-count fw-bold ms-2">2.0k Me gusta</span>
+                                </div>
+                                <p class="text-start m-2">
+                                    <span class="fw-bold">Luis Walle</span> Esta foto la tomé cuando fui a TalentLand 2024.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="5000">
+                            <div class="mb-4 text-white">
+                                <div class="d-flex align-items-center justify-content-start m-2">
+                                    <img src="https://picsum.photos/id/237/200/300" alt="Avatar Logo" style="width:30px; height:30px;" class="rounded-pill">
+                                    <span class="m-2">Jesús Nuñez</span>
+                                </div>
+                                <img src="https://picsum.photos/id/15/2500/1667" alt="image 1"
+                                  class="w-100 rounded">
+                                <div class="d-flex align-items-center m-2">
+                                    <div class="like-btn border-0 rounded-circle d-flex justify-content-center align-items-center p-2">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="m-0" viewBox="0 0 16 16">
+                                            <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                                        </svg> 
+                                    </div>
+                                    <span class="like-count fw-bold ms-2">10.0k Me gusta</span>
+                                </div>
+                                <p class="text-start m-2">
+                                    <span class="fw-bold">Jesús Nuñez</span> Esta foto la tomé cuando fui a Canadá con Elias.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="mb-4 text-white">
+                                <div class="d-flex align-items-center justify-content-start m-2">
+                                    <img src="https://picsum.photos/id/237/200/300" alt="Avatar Logo" style="width:30px; height:30px;" class="rounded-pill">
+                                    <span class="m-2">Erick Mata</span>
+                                </div>
+                                <img src="https://picsum.photos/id/29/4000/2670" alt="image 1"
+                                  class="w-100 rounded">
+                                <div class="d-flex align-items-center m-2">
+                                    <div class="like-btn border-0 rounded-circle d-flex justify-content-center align-items-center p-2">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="m-0" viewBox="0 0 16 16">
+                                            <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                                        </svg> 
+                                    </div>
+                                    <span class="like-count fw-bold ms-2">10.0k Me gusta</span>
+                                </div>
+                                <p class="text-start m-2">
+                                    <span class="fw-bold">Erick Mata</span> Tomé la foto en el Planetario de Ciudad Victoria.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-        </nav>
-    </div>
     
+            <div class="col-md-6 right-section">
+                <div class="description-box w-75">
+                    <h2 class="fw-bold">Bienvenido a ASocial</h2>
+                    <p class="text-start">Una plataforma para conectar con personas y compartir momentos especiales. 
+                        Aquí puedes descubrir nuevas amistades, compartir tus experiencias y disfrutar de contenido 
+                        exclusivo.</p>  
+                    <p class="mt-5 fw-bold">Únete a nuestra comunidad y empieza a crear recuerdos inolvidables hoy mismo.</p>                  
+                    <a href="login.html" class="btn btn-dark btn-lg border-2 btn-outline-light mt-4">Iniciar Sesión</a>
+                </div>
+            </div>
+        </div>
+    </div>
+      
 </body>
 </html>
