--- a/profile.html
+++ b/profile.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
     <title>Profile</title>
 </head>
 <body class="vh-100" style="background: linear-gradient(to right, rgb(0, 0, 0) , rgb(90, 90, 90))">
@@ -18,19 +19,17 @@
         <div class="collapse navbar-collapse" id="navbarScroll">
           <ul class="navbar-nav my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="timeline.html">Home</a>
             </li>
           </ul>
           <ul class="navbar-nav dropdown ms-auto">
-            <li class="nav-item">
-              <a class="nav-link active" href="login.html">Login</a>
-            </li>  
             <li class="nav-item dropdown">
-              <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                <img src="https://picsum.photos/id/237/200/300" alt="Avatar Logo" style="width:30px; height:30px;" class="rounded-pill"> 
+              <a class="nav-link dropdown-toggle m-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <img src="https://picsum.photos/id/237/200/300" alt="Avatar Logo" style="width:30px; height:30px;" class="rounded-pill">
+                Alan Morales
               </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="profile.html">Profile</a></li>
+              <ul class="dropdown-menu bg-dark">
+                <li><a class="dropdown-item text-white" href="profile.html">Profile</a></li>
                 <!--<li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">Something else here</a></li>-->
               </ul>
@@ -51,7 +50,7 @@
                   style="width: 150px; z-index: 1">
               </div>
               <div class="ms-3" style="margin-top: 130px;">
-                <h5>Elias Hernandez</h5>
+                <h5>Alan Morales</h5>
                 <p>Ciudad Victoria</p>
               </div>
             </div>
@@ -62,11 +61,11 @@
                   <p class="small text-muted mb-0">Fotos</p>
                 </div>
                 <div class="px-3">
-                  <p class="mb-1 h5">200</p>
+                  <p class="mb-1 h5">1000</p>
                   <p class="small text-muted mb-0">Seguidores</p>
                 </div>
                 <div>
-                  <p class="mb-1 h5">5</p>
+                  <p class="mb-1 h5">500</p>
                   <p class="small text-muted mb-0">Siguiendo</p>
                 </div>
               </div>
@@ -76,55 +75,63 @@
                 <p class="lead fw-normal mb-1">Acerca de mi</p>
                 <div class="p-4 bg-body-tertiary">
                   <p class="font-italic mb-1">Programador</p>
-                  <p class="font-italic mb-1">Pareja de Cinthia Torres</p>
-                  <p class="font-italic mb-0">Vivo en el centro de Victoria</p>
+                  <p class="font-italic mb-1">Estudio en la Universidad Politécnica de Victoria</p>
+                  <p class="font-italic mb-0">Me gusta tocar la guitarra</p>
                 </div>
               </div>
               <div class="d-flex justify-content-between align-items-center mb-4 text-body">
                 <p class="lead fw-normal mb-0">Fotos recientes</p>
               </div>
               <div class="row g-2">
-                <div class="col mb-2 me-2 rounded p-0 position-relative">
+                <div class="col mb-2 me-2 rounded p-0">
                   <img src="https://picsum.photos/id/10/2500/1667" alt="image 1"
                     class="w-100 rounded">
-                  <button class="btn btn-outline-danger position-absolute top-0 start-0 m-2 like-btn border-0 rounded-circle d-flex justify-content-center align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill m-0 justify-content-center" viewBox="0 0 16 16">
-                      <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
-                    </svg> 
-                  </button>
-                  <span class="like-count fw-bold m-2">2.0k Me gusta</span>
+                  <div class="d-flex align-items-center mt-1">
+                    <div class="like-btn border-0 rounded-circle d-flex justify-content-center align-items-center p-2">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="m-0" viewBox="0 0 16 16">
+                          <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                      </svg> 
+                    </div>
+                    <span class="like-count fw-bold m-2">2.0k Me gusta</span>
+                  </div>    
                 </div>
-                <div class="col mb-2 rounded p-0 position-relative">
+                <div class="col mb-2 rounded p-0">
                   <img src="https://picsum.photos/id/15/2500/1667" alt="image 1"
                     class="w-100 rounded">
-                    <button class="btn btn-outline-danger position-absolute top-0 start-0 m-2 like-btn border-0 rounded-circle d-flex justify-content-center align-items-center">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill m-0 justify-content-center" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
-                      </svg> 
-                    </button>
-                    <span class="like-count fw-bold m-2">2.0k Me gusta</span>
+                    <div class="d-flex align-items-center mt-1">
+                      <div class="like-btn border-0 rounded-circle d-flex justify-content-center align-items-center p-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="m-0" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                        </svg> 
+                      </div>
+                      <span class="like-count fw-bold m-2">2.0k Me gusta</span>
+                    </div>  
                 </div>
               </div>
               <div class="row g-2">
-                <div class="col mb-2 me-2 rounded p-0 position-relative">
+                <div class="col mb-2 me-2 rounded p-0">
                   <img src="https://picsum.photos/id/18/2500/1667" alt="image 1"
                     class="w-100 rounded">
-                    <button class="btn btn-outline-danger position-absolute top-0 start-0 m-2 like-btn border-0 rounded-circle d-flex justify-content-center align-items-center">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill m-0 justify-content-center" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
-                      </svg> 
-                    </button>
-                    <span class="like-count fw-bold m-2">2.0k Me gusta</span>
+                    <div class="d-flex align-items-center mt-1">
+                      <div class="like-btn border-0 rounded-circle d-flex justify-content-center align-items-center p-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="m-0" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                        </svg> 
+                      </div>
+                      <span class="like-count fw-bold m-2">2.0k Me gusta</span>
+                    </div>  
                 </div>
-                <div class="col mb-2 rounded p-0 position-relative">
+                <div class="col mb-2 rounded p-0">
                   <img src="https://picsum.photos/id/29/4000/2670" alt="image 1"
                     class="w-100 rounded">
-                    <button class="btn btn-outline-danger position-absolute top-0 start-0 m-2 like-btn border-0 rounded-circle d-flex justify-content-center align-items-center">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill m-0 justify-content-center" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
-                      </svg> 
-                    </button>
-                    <span class="like-count fw-bold m-2">2.0k Me gusta</span>
+                    <div class="d-flex align-items-center mt-1">
+                      <div class="like-btn border-0 rounded-circle d-flex justify-content-center align-items-center p-2">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="m-0" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314"/>
+                        </svg> 
+                      </div>
+                      <span class="like-count fw-bold m-2">2.0k Me gusta</span>
+                    </div>  
                 </div>
               </div>
             </div>
@@ -132,5 +139,21 @@
         </div>
       </div>
   </div>
+
+  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    
+    <script>
+      $(document).ready(function () {
+        $(".like-btn").click(function () {
+          let icon = $(this).find("svg");
+          icon.toggleClass("liked");
+        });
+      });
+    </script>
+    <style>
+      .liked {
+        color: red;
+      }
+    </style>
 </body>
 </html>
