--- a/register.html
+++ b/register.html
@@ -76,6 +76,8 @@
                                             <option value="" disabled selected>Selecciona tu género *</option>
                                             <option value="Masculino">Masculino</option>
                                             <option value="Femenino">Femenino</option>
+                                            <option value="No aplica">No aplica</option>
+                                            <option value="Prefiero no decirlo">Prefiero no decirlo</option>
                                             <option value="Otro">Otro</option>
                                         </select>
                                     </div>
